RESOLVED FIXED211003
[iOS] Unable to sign up on twitter.com
https://bugs.webkit.org/show_bug.cgi?id=211003
Summary [iOS] Unable to sign up on twitter.com
Chris Dumez
Reported 2020-04-24 16:02:28 PDT
Unable to signup on twitter.com because the sign up process resets when you home out of Safari to check your emails to retrieve the confirmation code.
Attachments
Patch (10.52 KB, patch)
2020-04-24 16:46 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-04-24 16:02:37 PDT
Chris Dumez
Comment 2 2020-04-24 16:46:31 PDT
EWS
Comment 3 2020-04-24 17:51:25 PDT
Committed r260684: <https://trac.webkit.org/changeset/260684> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397527 [details].
Chris Dumez
Comment 4 2020-05-06 15:10:05 PDT
Reopening since the patch was reverted in https://trac.webkit.org/changeset/261252.
Chris Dumez
Comment 5 2020-05-07 19:15:17 PDT
Note You need to log in before you can comment on or make changes to this bug.